--- a/index.html
+++ b/index.html
@@ -287,25 +287,34 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>This part will showcase my previous work-experience</p>
+          <p>This is my resume which will give you a vast idea of my education, projects, internships and work-experience in an organized timeline.</p>
         </div>
 
         <div class="row">
           <div class="col-lg-6">
             <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
-              <h4>Alice Barkley</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+              <h4>Astrid Avalin Sørensen</h4>
+              <p><em>Ambitious Software Engineer with 5 years of coding experience, eager to get even more. Familiar with SCRUM and agile development and with an eye for detail.
+                     Always putting the SMART principles into consideration with every line of code.
+              </em></p>
               <p>
               <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
+                <li>Skt. Pauls Gade 16, 2 <br/>8000 Aarhus C, DK</li>
+                <li>astridavalin@gmail.com</li>
+                <li>+45 26 70 21 79</li>
               </ul>
               </p>
             </div>
 
             <h3 class="resume-title">Education</h3>
+            <div class="resume-item">
+              <h4>Bachelor in Software Engineering</h4>
+              <h5>2018 - 2021</h5>
+              <p><em>VIA UC - VIA University College, Viborg</em></p>
+              <p>I got a bachelor in Software Engineering with a specialization in AR & VR. I got familiar with developing for a lot of different HMDs from Microsoft HoloLens (XR), Oculus Rift/Quest & HTC Vive.</p>
+            </div>
+
             <div class="resume-item">
               <h4>Computer Science AP Degree</h4>
               <h5>2015 - 2018</h5>
@@ -325,35 +334,58 @@
               <p>I specialized within the creative line, which means I had Music & English on A-level and Drama on C-level. This also means I am pretty familiar with a ukulele and piano by now.</p>
             </div>
           </div>
+          
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
+              <h4>Unity Developer</h4>
+              <h5>2019</h5>
+              <p><em>AquaGlobe, Skanderborg, DK </em></p>
               <p>
               <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                <li>Worked together with an amazing colleague, creating an XR app for Microsoft HoloLens to tour different water facilities.</li>
+                <li>Mediator between different firms on the possibilities with this relatively new hardware, to create a mutual vision. </li>
+                <li>Creating simple 3D models in Maya to illustrate some of the machines at the facility</li>
               </ul>
               </p>
             </div>
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
+              <h4>Backend Developer</h4>
+              <h5>2015</h5>
+              <p><em>Smartplan, Aarhus, DK</em></p>
               <p>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                <li>Internship started at Smartplan, and was introduced to a R&D environment.</li>
+                <li>Created an automated rostering tool using Java and Optaplanner (Drools Rule Engine) from scratch.</li>
+                <li>After the internship ended, I was hired to finish and polish the tool.</li>
               </ul>
               </p>
             </div>
-          </div>
+            <h3 class="resume-title">Other Work-Experiences</h3>
+            <div class="resume-item">
+              <h4>Waiter & Server</h4>
+              <h5>2013</h5>
+              <p><em>Café Stay, Aarhus, DK </em></p>
+              <p>
+              <ul>
+                <li>Washed up dishes and made sandwiches.</li>
+                <li>Served food and cleaned up tables. </li>
+              </ul>
+              </p>
+            </div>
+
+            <div class="resume-item">
+              <h4>Voluntary Runner</h4>
+              <h5>2012</h5>
+              <p><em>Grøn Koncert, Aarhus, DK </em></p>
+              <p>
+              <ul>
+                <li>Made sure kegs were always filled.</li>
+                <li>Made sure the servers always had beers to serve customers.</li>
+              </ul>
+              </p>
+            </div>
+          </div> 
         </div>
 
       </div>
