--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                   <div class="count-box">
                     <i class="bx bx-world"></i>
                     <span data-toggle="counter-up">2</span>
-                    <p><strong>Languages</strong> I am fluent in. Danish and English. Furthermore I have a limited understanding of Hungarian and French</p>
+                    <p><strong>Languages</strong> I am fluent in. Danish and English. Furthermore I have a limited understanding of French and Hungarian.</p>
                   </div>
                 </div>
               </div>
