--- a/index.html
+++ b/index.html
@@ -38,11 +38,12 @@
 </head>
 
 <body>
-
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column align-items-center justify-content-center">
+    <div class="sliding-background">
+    </div>
     <h1>Hi, I'm Astrid Avalin!</h1>
-    <h2>Software Engineer - Full-Stack Developer</h2>
+    <h2>Software Engineer - Full-Stack Developer - Pixel Artist</h2>
     <a href="#about" class="btn-get-started scrollto"><i class="icofont-simple-down"></i></a>
   </section><!-- End Hero -->
 
@@ -348,6 +349,7 @@
                 <li>Worked together with an amazing colleague, creating an XR app for Microsoft HoloLens to tour different water facilities.</li>
                 <li>Mediator between different firms on the possibilities with this relatively new hardware, to create a mutual vision. </li>
                 <li>Creating simple 3D models in Maya to illustrate some of the machines at the facility</li>
+                <li>Read more about the experience <a href="https://www.via.dk/uddannelser/studerende/kate-og-astrid-softwareingenioer">here</a></li>
               </ul>
               </p>
             </div>
