--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           
           <div class="col-xl-7 pl-0 pl-lg-5 pr-lg-1 d-flex align-items-stretch">
             <div class="content d-flex flex-column justify-content-center">
-              <h3>Thank you for checking out my site!</h3>
+              <h3>Thank you for visiting!</h3>
               <p>
                  I am a software engineer  with an AP degree in computer science looking for my next new development project! Maybe you have one for me?
               </p>
