--- a/index.html
+++ b/index.html
@@ -408,20 +408,21 @@
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">AR/VR</li>
+              <li data-filter=".filter-arvr">AR/VR</li>
               <li data-filter=".filter-web">Web</li>
-              <li data-filter=".filter-card">Other</li>
+              <li data-filter=".filter-other">Other</li>
             </ul>
           </div>
         </div>
 
         <div class="row portfolio-container">
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-arvr">
             <div class="portfolio-wrap rounded" data-toggle="modal" data-target="#portfolioModal1">
               <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid rounded" alt="">
               <div class="portfolio-info">
-                <h4>App</h4>
+                <h4>AR/VR 1</h4>
+                <p>AR/VR</p>
               </div>
             </div>
           </div>
@@ -436,22 +437,22 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-arvr">
             <div class="portfolio-wrap rounded" data-toggle="modal" data-target="#portfolioModal1">
               <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid rounded" alt="">
               <div class="portfolio-info">
-                <h4>App 2</h4>
-                <p>App</p>
+                <h4>AR/VR 2</h4>
+                <p>AR/VR</p>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-other">
             <div class="portfolio-wrap rounded" data-toggle="modal" data-target="#portfolioModal1">
               <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid rounded" alt="">
               <div class="portfolio-info">
-                <h4>Card 2</h4>
-                <p>Card</p>
+                <h4>Other 2</h4>
+                <p>Other</p>
               </div>
             </div>
           </div>
@@ -466,32 +467,32 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-arvr">
             <div class="portfolio-wrap rounded" data-toggle="modal" data-target="#portfolioModal1">
               <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid rounded" alt="">
               <div class="portfolio-info">
-                <h4>App 3</h4>
-                <p>App</p>
+                <h4>AR/VR 3</h4>
+                <p>AR/VR</p>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-other">
             <div class="portfolio-wrap rounded" data-toggle="modal" data-target="#portfolioModal1">
               <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid rounded" alt="">
               <div class="portfolio-info">
-                <h4>Card 1</h4>
-                <p>Card</p>
+                <h4>Other 1</h4>
+                <p>Other</p>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-other">
             <div class="portfolio-wrap rounded" data-toggle="modal" data-target="#portfolioModal1">
               <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid rounded" alt="">
               <div class="portfolio-info">
-                <h4>Card 3</h4>
-                <p>Card</p>
+                <h4>Other 3</h4>
+                <p>Other</p>
               </div>
             </div>
           </div>
