--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
-              <h4 class="title"><a href="">Modding Games</a></h4>
+              <h4 class="title"><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=601718120">Modding Games</a></h4>
               <p class="description">I have created weapons and armor for games such as Skyrim using 3Ds Max</p>
             </div>
           </div>
@@ -541,8 +541,8 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4 class="title"><a href="">Pixel Art</a></h4>
-              <p class="description">I have created a wide bunch of pixel graphics and animations, with only a few being public</p>
+              <h4 class="title"><a href="https://www.piskelapp.com/user/4947883801444352/public">Pixel Art</a></h4>
+              <p class="description">I have created a wide bunch of pixel graphics and animations, with only a few being public.</p>  
             </div>
           </div>
 
