--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
   <section id="hero" class="d-flex flex-column align-items-center justify-content-center">
     <div class="sliding-background">
     </div>
+    <img src="assets/img/me-pixelart.png" class="front">
     <h1>Hi, I'm Astrid Avalin!</h1>
     <h2>Software Engineer - Full-Stack Developer - Pixel Artist</h2>
     <a href="#about" class="btn-get-started scrollto"><i class="icofont-simple-down"></i></a>
@@ -533,7 +534,7 @@
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
-              <h4 class="title"><a href="https://steamcommunity.com/sharedfiles/filedetails/?id=601718120">Modding Games</a></h4>
+              <h4 class="title"><a href="">Modding Games</a></h4>
               <p class="description">I have created weapons and armor for games such as Skyrim using 3Ds Max</p>
             </div>
           </div>
