--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-arvr">
             <div class="portfolio-wrap rounded" data-toggle="modal" data-target="#portfolioModal1">
-              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid rounded" alt="">
+              <img src="assets/img/portfolio/portfolio-1.png" class="img-fluid rounded" alt="">
               <div class="portfolio-info">
                 <h4>AR/VR 1</h4>
                 <p>AR/VR</p>
@@ -574,12 +574,12 @@
           <div class="col-lg-4 col-md-4">
             <div class="contact-about">
               <h3>LINKS</h3>
-              <p>Want to learn more about me? <br/>Feel free to check out these links.</p>
+              <p>Still want to get to know me better? <br/>Feel free to check out these links.</p>
               <div class="social-links">
                 <a href="#" class="twitter"><i class="icofont-twitter"></i></a>
                 <a href="#" class="facebook"><i class="icofont-facebook"></i></a>
                 <a href="#" class="instagram"><i class="icofont-instagram"></i></a>
-                <a href="#" class="linkedin"><i class="icofont-linkedin"></i></a>
+                <a href="https://dk.linkedin.com/in/astridavalin" class="linkedin"><i class="icofont-linkedin"></i></a>
               </div>
             </div>
           </div>
@@ -650,12 +650,12 @@
                           <div class="row justify-content-center">
                               <div class="col-lg-8">
                                   <!-- Portfolio Modal - Title-->
-                                  <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal1Label">Log Cabin</h2>
+                                  <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal1Label">Arachnophilia VR</h2><br/>
   
                                   <!-- Portfolio Modal - Image-->
-                                  <img class="img-fluid rounded mb-5" src="assets/img/portfolio/portfolio-1.jpg" alt="" />
+                                  <img class="img-fluid rounded mb-5" src="assets/img/portfolio/portfolio-1.png" alt="" />
                                   <!-- Portfolio Modal - Text-->
-                                  <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                  <p class="mb-5">Arachnophilia VR is a tool meant to alleviate arachnophobia and help the user to combat their fear with lifelike spider-interactions. The user controls how many spiders will be spawned and can squash, lift, throw the spiders to create an immersive and realistic experience.</p>
                                   <button class="btn btn-primary" data-dismiss="modal">
                                       <i class="fas fa-times fa-fw"></i>
                                       Close Window
