--- a/index.html
+++ b/index.html
@@ -422,8 +422,8 @@
             <div class="portfolio-wrap rounded" data-toggle="modal" data-target="#portfolioModal1">
               <img src="assets/img/portfolio/portfolio-1.png" class="img-fluid rounded" alt="">
               <div class="portfolio-info">
-                <h4>AR/VR 1</h4>
-                <p>AR/VR</p>
+                <h4>Arachnophilia VR</h4>
+                <p>An immersive VR experience to combat arachnophobia</p>
               </div>
             </div>
           </div>
@@ -655,7 +655,7 @@
                                   <!-- Portfolio Modal - Image-->
                                   <img class="img-fluid rounded mb-5" src="assets/img/portfolio/portfolio-1.png" alt="" />
                                   <!-- Portfolio Modal - Text-->
-                                  <p class="mb-5">Arachnophilia VR is a tool meant to alleviate arachnophobia and help the user to combat their fear with lifelike spider-interactions. The user controls how many spiders will be spawned and can squash, lift, throw the spiders to create an immersive and realistic experience.</p>
+                                  <p class="mb-5">Arachnophilia VR is a Unity project and is meant as a tool to alleviate arachnophobia and help the user to combat their fear with lifelike spider-interactions. The user controls how many spiders will be spawned and can squash, lift, throw the spiders to create an immersive and realistic experience.</p>
                                   <button class="btn btn-primary" data-dismiss="modal">
                                       <i class="fas fa-times fa-fw"></i>
                                       Close Window
