--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         <ul>
           <li class="active"><a href="index.html">Home</a></li>
           <li><a href="#about">About</a></li>
+          <li><a href="#skills">Skills</a></li>
           <li><a href="#resume">Resume</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
           <li><a href="#services">Hobbies</a></li>
@@ -409,7 +410,7 @@
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-arvr">AR/VR</li>
+              <li data-filter=".filter-xr">XR</li>
               <li data-filter=".filter-web">Web</li>
               <li data-filter=".filter-other">Other</li>
             </ul>
@@ -418,7 +419,7 @@
 
         <div class="row portfolio-container">
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-arvr">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-xr">
             <div class="portfolio-wrap rounded" data-toggle="modal" data-target="#portfolioModal1">
               <img src="assets/img/portfolio/portfolio-1.png" class="img-fluid rounded" alt="">
               <div class="portfolio-info">
@@ -428,17 +429,17 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <div class="portfolio-wrap rounded" data-toggle="modal" data-target="#portfolioModal1">
-              <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid rounded" alt="">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-other">
+            <div class="portfolio-wrap rounded" data-toggle="modal" data-target="#portfolioModal2">
+              <img src="assets/img/portfolio/portfolio-2.png" class="img-fluid rounded" alt="">
               <div class="portfolio-info">
-                <h4>Web 3</h4>
-                <p>Web</p>
+                <h4>Snek</h4>
+                <p>Snek snek</p>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-arvr">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-xr">
             <div class="portfolio-wrap rounded" data-toggle="modal" data-target="#portfolioModal1">
               <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid rounded" alt="">
               <div class="portfolio-info">
@@ -468,7 +469,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-arvr">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-xr">
             <div class="portfolio-wrap rounded" data-toggle="modal" data-target="#portfolioModal1">
               <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid rounded" alt="">
               <div class="portfolio-info">
@@ -667,29 +668,22 @@
               </div>
           </div>
       </div>
-      <!-- Portfolio Modal 2-->
-      <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-labelledby="portfolioModal2Label" aria-hidden="true">
+
+        <!-- Portfolio Modal 2-->
+        <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-labelledby="portfolioModal1Label" aria-hidden="true">
           <div class="modal-dialog modal-xl" role="document">
               <div class="modal-content">
-                  <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                      <span aria-hidden="true"><i class="fas fa-times"></i></span>
-                  </button>
                   <div class="modal-body text-center">
                       <div class="container">
                           <div class="row justify-content-center">
                               <div class="col-lg-8">
                                   <!-- Portfolio Modal - Title-->
-                                  <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal2Label">Tasty Cake</h2>
-                                  <!-- Icon Divider-->
-                                  <div class="divider-custom">
-                                      <div class="divider-custom-line"></div>
-                                      <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
-                                      <div class="divider-custom-line"></div>
-                                  </div>
+                                  <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal2Label">2D Snake</h2><br/>
+  
                                   <!-- Portfolio Modal - Image-->
-                                  <img class="img-fluid rounded mb-5" src="assets/img/portfolio/cake.png" alt="" />
+                                  <img class="img-fluid rounded mb-5" src="assets/img/portfolio/portfolio-2.png" alt="" />
                                   <!-- Portfolio Modal - Text-->
-                                  <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                  <p class="mb-5">2D Snake was made as part of an assignment during my Software Engineering bachelor. It is written in pure C# using Windows Forms to render the level.</p>
                                   <button class="btn btn-primary" data-dismiss="modal">
                                       <i class="fas fa-times fa-fw"></i>
                                       Close Window
@@ -701,6 +695,7 @@
               </div>
           </div>
       </div>
+
       <!-- Portfolio Modal 3-->
       <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-labelledby="portfolioModal3Label" aria-hidden="true">
           <div class="modal-dialog modal-xl" role="document">
@@ -735,6 +730,7 @@
               </div>
           </div>
       </div>
+
       <!-- Portfolio Modal 4-->
       <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-labelledby="portfolioModal4Label" aria-hidden="true">
           <div class="modal-dialog modal-xl" role="document">
@@ -769,6 +765,7 @@
               </div>
           </div>
       </div>
+
       <!-- Portfolio Modal 5-->
       <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-labelledby="portfolioModal5Label" aria-hidden="true">
           <div class="modal-dialog modal-xl" role="document">
@@ -803,6 +800,7 @@
               </div>
           </div>
       </div>
+
       <!-- Portfolio Modal 6-->
       <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-labelledby="portfolioModal6Label" aria-hidden="true">
           <div class="modal-dialog modal-xl" role="document">
