Fixed about button

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <img src="assets/img/me-pixelart.png" class="front">
     <h1>Hi, I'm Astrid Avalin!</h1>
     <h2>Software Engineer - Full-Stack Developer - Pixel Artist</h2>
-    <a href="#about" class="btn-get-started scrollto"><i class="icofont-simple-down"></i></a>
+    <a href="#about" class="front btn-get-started scrollto"><i class="icofont-simple-down"></i></a>
   </section><!-- End Hero -->
 
   <!-- ======= Header ======= -->
