--- a/index.html
+++ b/index.html
@@ -433,8 +433,8 @@
             <div class="portfolio-wrap rounded" data-toggle="modal" data-target="#portfolioModal2">
               <img src="assets/img/portfolio/portfolio-2.png" class="img-fluid rounded" alt="">
               <div class="portfolio-info">
-                <h4>Snek</h4>
-                <p>Snek snek</p>
+                <h4>2D Snake</h4>
+                <p>A Snake game written in C#</p>
               </div>
             </div>
           </div>
@@ -683,7 +683,7 @@
                                   <!-- Portfolio Modal - Image-->
                                   <img class="img-fluid rounded mb-5" src="assets/img/portfolio/portfolio-2.png" alt="" />
                                   <!-- Portfolio Modal - Text-->
-                                  <p class="mb-5">2D Snake was made as part of an assignment during my Software Engineering bachelor. It is written in pure C# using Windows Forms to render the level.</p>
+                                  <p class="mb-5">2D Snake was made as part of an assignment during my Software Engineering bachelor.<br/>It is written in pure C# using Windows Forms to render the graphics. Click <a href="https://github.com/Avalin/wf_snake">here</a> to check out the project.</p>
                                   <button class="btn btn-primary" data-dismiss="modal">
                                       <i class="fas fa-times fa-fw"></i>
                                       Close Window
