--- a/index.html
+++ b/index.html
@@ -439,12 +439,12 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-xr">
-            <div class="portfolio-wrap rounded" data-toggle="modal" data-target="#portfolioModal1">
-              <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid rounded" alt="">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-other">
+            <div class="portfolio-wrap rounded" data-toggle="modal" data-target="#portfolioModal3">
+              <img src="assets/img/portfolio/portfolio-3.png" class="img-fluid rounded" alt="">
               <div class="portfolio-info">
-                <h4>AR/VR 2</h4>
-                <p>AR/VR</p>
+                <h4>T-Shirt Creator Kit</h4>
+                <p>A project experimenting with shaders and UV mapping.</p>
               </div>
             </div>
           </div>
@@ -670,7 +670,7 @@
       </div>
 
         <!-- Portfolio Modal 2-->
-        <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-labelledby="portfolioModal1Label" aria-hidden="true">
+        <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-labelledby="portfolioModal2Label" aria-hidden="true">
           <div class="modal-dialog modal-xl" role="document">
               <div class="modal-content">
                   <div class="modal-body text-center">
@@ -696,29 +696,21 @@
           </div>
       </div>
 
-      <!-- Portfolio Modal 3-->
-      <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-labelledby="portfolioModal3Label" aria-hidden="true">
+        <!-- Portfolio Modal 3-->
+        <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-labelledby="portfolioModal3Label" aria-hidden="true">
           <div class="modal-dialog modal-xl" role="document">
               <div class="modal-content">
-                  <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                      <span aria-hidden="true"><i class="fas fa-times"></i></span>
-                  </button>
                   <div class="modal-body text-center">
                       <div class="container">
                           <div class="row justify-content-center">
                               <div class="col-lg-8">
                                   <!-- Portfolio Modal - Title-->
-                                  <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal3Label">Circus Tent</h2>
-                                  <!-- Icon Divider-->
-                                  <div class="divider-custom">
-                                      <div class="divider-custom-line"></div>
-                                      <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
-                                      <div class="divider-custom-line"></div>
-                                  </div>
+                                  <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal3Label">T-Shirt Creator Kit</h2><br/>
+  
                                   <!-- Portfolio Modal - Image-->
-                                  <img class="img-fluid rounded mb-5" src="assets/img/portfolio/circus.png" alt="" />
+                                  <img class="img-fluid rounded mb-5" src="assets/img/portfolio/portfolio-3.png" alt="" />
                                   <!-- Portfolio Modal - Text-->
-                                  <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                  <p class="mb-5">Placeholder text</p>
                                   <button class="btn btn-primary" data-dismiss="modal">
                                       <i class="fas fa-times fa-fw"></i>
                                       Close Window
@@ -730,6 +722,7 @@
               </div>
           </div>
       </div>
+
 
       <!-- Portfolio Modal 4-->
       <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-labelledby="portfolioModal4Label" aria-hidden="true">
