--- a/index.html
+++ b/index.html
@@ -451,10 +451,10 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-other">
             <div class="portfolio-wrap rounded" data-toggle="modal" data-target="#portfolioModal4">
-              <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid rounded" alt="">
+              <img src="assets/img/portfolio/portfolio-4.png" class="img-fluid rounded" alt="">
               <div class="portfolio-info">
-                <h4>Other 2</h4>
-                <p>Other</p>
+                <h4>Slay The Dragon</h4>
+                <p>A Hack'n'Slash game made in collaboration with The Animation Workshop</p>
               </div>
             </div>
           </div>
@@ -710,7 +710,7 @@
                                   <!-- Portfolio Modal - Image-->
                                   <img class="img-fluid rounded mb-5" src="assets/img/portfolio/portfolio-3.png" alt="" />
                                   <!-- Portfolio Modal - Text-->
-                                  <p class="mb-5">Placeholder text</p>
+                                  <p class="mb-5">Click <a href="https://github.com/Avalin/unity_t_shirt_creator_kit">here</a> to check out the project.</p>
                                   <button class="btn btn-primary" data-dismiss="modal">
                                       <i class="fas fa-times fa-fw"></i>
                                       Close Window
@@ -724,29 +724,21 @@
       </div>
 
 
-      <!-- Portfolio Modal 4-->
-      <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-labelledby="portfolioModal4Label" aria-hidden="true">
+        <!-- Portfolio Modal 4-->
+        <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-labelledby="portfolioModal4Label" aria-hidden="true">
           <div class="modal-dialog modal-xl" role="document">
               <div class="modal-content">
-                  <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                      <span aria-hidden="true"><i class="fas fa-times"></i></span>
-                  </button>
                   <div class="modal-body text-center">
                       <div class="container">
                           <div class="row justify-content-center">
                               <div class="col-lg-8">
                                   <!-- Portfolio Modal - Title-->
-                                  <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal4Label">Controller</h2>
-                                  <!-- Icon Divider-->
-                                  <div class="divider-custom">
-                                      <div class="divider-custom-line"></div>
-                                      <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
-                                      <div class="divider-custom-line"></div>
-                                  </div>
+                                  <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal4Label">T-Shirt Creator Kit</h2><br/>
+  
                                   <!-- Portfolio Modal - Image-->
-                                  <img class="img-fluid rounded mb-5" src="assets/img/portfolio/game.png" alt="" />
+                                  <img class="img-fluid rounded mb-5" src="assets/img/portfolio/portfolio-4.png" alt="" />
                                   <!-- Portfolio Modal - Text-->
-                                  <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia neque assumenda ipsam nihil, molestias magnam, recusandae quos quis inventore quisquam velit asperiores, vitae? Reprehenderit soluta, eos quod consequuntur itaque. Nam.</p>
+                                  <p class="mb-5">Placeholder text</p>
                                   <button class="btn btn-primary" data-dismiss="modal">
                                       <i class="fas fa-times fa-fw"></i>
                                       Close Window
