--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-world"></i></div>
               <h4 class="title"><a href="">3D Modelling</a></h4>
-              <p class="description">As part of my bachelor, I have created</p>
+              <p class="description">...</p>
             </div>
           </div>
 
@@ -683,7 +683,9 @@
                                   <!-- Portfolio Modal - Image-->
                                   <img class="img-fluid rounded mb-5" src="assets/img/portfolio/portfolio-2.png" alt="" />
                                   <!-- Portfolio Modal - Text-->
-                                  <p class="mb-5">2D Snake was made as part of an assignment during my Software Engineering bachelor.<br/>It is written in pure C# using Windows Forms to render the graphics. Click <a href="https://github.com/Avalin/wf_snake">here</a> to check out the project.</p>
+                                  <p class="mb-5">2D Snake was made as part of an assignment during my Software Engineering bachelor.
+                                    <br/>It is written in pure C# using Windows Forms to render the graphics. 
+                                    <br/>Click <a href="https://github.com/Avalin/wf_snake">here</a> to check out the project.</p>
                                   <button class="btn btn-primary" data-dismiss="modal">
                                       <i class="fas fa-times fa-fw"></i>
                                       Close Window
@@ -733,12 +735,12 @@
                           <div class="row justify-content-center">
                               <div class="col-lg-8">
                                   <!-- Portfolio Modal - Title-->
-                                  <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal4Label">T-Shirt Creator Kit</h2><br/>
+                                  <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal4Label">Slay The Dragon</h2><br/>
   
                                   <!-- Portfolio Modal - Image-->
                                   <img class="img-fluid rounded mb-5" src="assets/img/portfolio/portfolio-4.png" alt="" />
                                   <!-- Portfolio Modal - Text-->
-                                  <p class="mb-5">Placeholder text</p>
+                                  <p class="mb-5">I have participated in the creation of Slay The Dragon together with The Animation Workshop in Viborg. My primary role was to reorganize the code to a feasible and future-minded structure but also to create some minor new tweaks and features for the gameplay.</p>
                                   <button class="btn btn-primary" data-dismiss="modal">
                                       <i class="fas fa-times fa-fw"></i>
                                       Close Window
