--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
               <img src="assets/img/portfolio/portfolio-3.png" class="img-fluid rounded" alt="">
               <div class="portfolio-info">
                 <h4>T-Shirt Creator Kit</h4>
-                <p>A project experimenting with shaders and UV mapping.</p>
+                <p>A project experimenting with shaders and UV mapping</p>
               </div>
             </div>
           </div>
