--- a/index.html
+++ b/index.html
@@ -471,10 +471,10 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-xr">
             <div class="portfolio-wrap rounded" data-toggle="modal" data-target="#portfolioModal6">
-              <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid rounded" alt="">
+              <img src="assets/img/portfolio/portfolio-6.png" class="img-fluid rounded" alt="">
               <div class="portfolio-info">
-                <h4>AR/VR 3</h4>
-                <p>AR/VR</p>
+                <h4>BattleBoss for Oculus Rift</h4>
+                <p>Fourth semester VR project</p>
               </div>
             </div>
           </div>
@@ -770,6 +770,33 @@
                                 <p class="mb-5">Atari Breakout ???
                                   <br/>Click <a href="https://github.com/Avalin/unity_atari_breakout">here</a> to check out the project.
                                 </p>
+                                <button class="btn btn-primary" data-dismiss="modal">
+                                    <i class="fas fa-times fa-fw"></i>
+                                    Close Window
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+     <!-- Portfolio Modal 6-->
+      <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-labelledby="portfolioModal6Label" aria-hidden="true">
+        <div class="modal-dialog modal-xl" role="document">
+            <div class="modal-content">
+                <div class="modal-body text-center">
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="col-lg-8">
+                                <!-- Portfolio Modal - Title-->
+                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal6Label">BattleBoss for VR</h2><br/>
+
+                                <!-- Portfolio Modal - Image-->
+                                <img class="img-fluid rounded mb-5" src="assets/img/portfolio/portfolio-6.png" alt="" />
+                                <!-- Portfolio Modal - Text-->
+                                <p class="mb-5">First semester project</p>
                                 <button class="btn btn-primary" data-dismiss="modal">
                                     <i class="fas fa-times fa-fw"></i>
                                     Close Window
