--- a/index.html
+++ b/index.html
@@ -473,8 +473,8 @@
             <div class="portfolio-wrap rounded" data-toggle="modal" data-target="#portfolioModal6">
               <img src="assets/img/portfolio/portfolio-6.png" class="img-fluid rounded" alt="">
               <div class="portfolio-info">
-                <h4>BattleBoss for Oculus Rift</h4>
-                <p>Fourth semester VR project</p>
+                <h4>BattleBoss VR</h4>
+                <p>Fourth semester VR project made for Oculus Rift</p>
               </div>
             </div>
           </div>
