--- a/index.html
+++ b/index.html
@@ -410,8 +410,9 @@
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-xr">XR</li>
-              <li data-filter=".filter-web">Web</li>
+              <li data-filter=".filter-xr">AR/VR/XR</li>
+              <li data-filter=".filter-unity">Unity</li>
+              <li data-filter=".filter-unreal">Unreal</li>
               <li data-filter=".filter-other">Other</li>
             </ul>
           </div>
@@ -429,7 +430,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-other">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-unity">
             <div class="portfolio-wrap rounded" data-toggle="modal" data-target="#portfolioModal2">
               <img src="assets/img/portfolio/portfolio-2.png" class="img-fluid rounded" alt="">
               <div class="portfolio-info">
@@ -439,7 +440,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-other">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-unity">
             <div class="portfolio-wrap rounded" data-toggle="modal" data-target="#portfolioModal3">
               <img src="assets/img/portfolio/portfolio-3.png" class="img-fluid rounded" alt="">
               <div class="portfolio-info">
@@ -449,7 +450,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-other">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-unity">
             <div class="portfolio-wrap rounded" data-toggle="modal" data-target="#portfolioModal4">
               <img src="assets/img/portfolio/portfolio-4.png" class="img-fluid rounded" alt="">
               <div class="portfolio-info">
@@ -459,7 +460,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-other">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-unity">
             <div class="portfolio-wrap rounded" data-toggle="modal" data-target="#portfolioModal5">
               <img src="assets/img/portfolio/portfolio-5.png" class="img-fluid rounded" alt="">
               <div class="portfolio-info">
