--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
             <div class="resume-item">
               <h4>Math A Degree</h4>
               <h5>2014 - 2015</h5>
-              <p><em>VUC - Voksen Uddannelses Center, Aarhus</em></p>
+              <p><em>VUC - Voksenuddannelsescenter, Aarhus</em></p>
               <p>In order to continue my studies with computer science, I needed to increase my math from C-level to A-level, and thus I spent a year on VUC to achieve that.</p>
             </div>
             <div class="resume-item">
