--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
 
         <div class="row portfolio-container">
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-xr">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-xr filter-unity">
             <div class="portfolio-wrap rounded" data-toggle="modal" data-target="#portfolioModal1">
               <img src="assets/img/portfolio/portfolio-1.png" class="img-fluid rounded" alt="">
               <div class="portfolio-info">
@@ -430,7 +430,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-unity">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-other">
             <div class="portfolio-wrap rounded" data-toggle="modal" data-target="#portfolioModal2">
               <img src="assets/img/portfolio/portfolio-2.png" class="img-fluid rounded" alt="">
               <div class="portfolio-info">
@@ -470,7 +470,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-xr">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-xr filter-unity">
             <div class="portfolio-wrap rounded" data-toggle="modal" data-target="#portfolioModal6">
               <img src="assets/img/portfolio/portfolio-6.png" class="img-fluid rounded" alt="">
               <div class="portfolio-info">
