--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
               <li data-filter="*" class="filter-active">All</li>
               <li data-filter=".filter-xr">AR/VR/XR</li>
               <li data-filter=".filter-unity">Unity</li>
-              <li data-filter=".filter-unreal">Unreal</li>
+              <li data-filter=".filter-unreal">Unreal Engine</li>
               <li data-filter=".filter-other">Other</li>
             </ul>
           </div>
