--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bxl-dribbble"></i></div>
               <h4 class="title"><a href="">Creating Games</a></h4>
-              <p class="description">I am working on a 2.5D MMO game that I would love to show you during an interview</p>
+              <p class="description">I am working on a 2.5D MMO game currently. Feel free to ask me about it!</p>
             </div>
           </div>
 
