--- a/index.html
+++ b/index.html
@@ -67,9 +67,7 @@
           <li><a href="#portfolio">Portfolio</a></li>
           <li><a href="#services">Hobbies</a></li>
           <li><a href="#contact">Contact</a></li> 
-          <li><a href="index-dk.html">
-            <img src="assets/img/flags/dk.png" class="img-fluid" alt="">
-          </a></li>                                   
+          <li><a href="index-dk.html"><img src="assets/img/flags/dk.png"></a></li>                                   
         </ul>
       </nav><!-- .nav-menu -->
 
@@ -523,7 +521,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-world"></i></div>
               <h4 class="title"><a href="">3D Modelling</a></h4>
-              <p class="description">...</p>
+              <p class="description">Lorum Ipsum Dolores Lorum Ipsum Dolores Lorum Ipsum Dolores</p>
             </div>
           </div>
 
